# AI_news2

./: DEPLOYMENT.md  README_v2.md  benchmark.py  cli.py  config.yaml  config_manager.py  final_integration_test.py  init_database.py  integration_test.py  logger.py  models.py  monitor.py  news.db  news_updater_v2.py  pyproject.toml  requirements.txt  retry_utils.py  simple_integration_test.py  simple_integration_test_fixed.py  test_updater.py
backup_v1/: news.jsonl.backup
docs/data/: news.jsonl  processed_ids.txt
